--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,14 +9,22 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>Simple & Smart Expense tracker <br>from SN AnyDevice Software Solutions</p>
+                    <ul>
+                        <li>Keep track of your personal, family (all other accounts like Business, Travel) expenses</li>
+                    </ul>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+                        <ul>
+                            <li>Quickly enter your expenses</li>
+                            <li>View expenses grouped by month and date</li>
+                            <li>Know exactly where your money goes</li>
+                            <li>View reports for all accounts, wallets, categories, locations</li>
+                        </ul>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+                    <a href="https://itunes.apple.com/us/app/id1456311969" class="btn btn-lg">
+                        <img src="/img/download.png" alt="Download from AppStore">
                     </a>
                 </div>
             </div>
