Updated contact form

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -9,8 +9,21 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
+                        <form method="POST" action="https://formspree.io/info@snanydevicess.com" style="margin: 20px 0px 20px 0px;">
+                            <div class="form-group" style="width: 50%; margin: auto;">
+                                <label for="Email" style="color: rgba(255, 255, 255, .5)">Email Address:</label>
+                                <input type="email" class="form-control" name="email" aria-describedby="emailHelp" placeholder="Please enter your email address here.">
+                                <small id="emailHelp" class="form-text text-muted">We'll NEVER share your email with anyone else.</small><br>
+                                <label for="Message" style="color: rgba(255, 255, 255, .5)">Message:</label>
+                                <textarea class="form-control" name="message" rows="3" placeholder="Please enter your message here."></textarea><br>
+                                <input type="hidden" name="_next" value="#!ThankYou" />
+                                <input type="text" name="_gotcha" style="display:none" />
+                                <button type="submit" class="btn btn-primary" style="width: 100%">Send</button>
+                            </div>
+                        </form>
                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                     <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
+                    <!--
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
@@ -48,6 +61,7 @@
                             </div>
                         </div>
                     </form>
+                    -->
                 </div>
             </div>
         </div>
